--- a/.gitignore
+++ b/.gitignore
@@ -4,3 +4,16 @@ somethng/.idea/misc.xml
 somethng/.idea/modules.xml
 somethng/.idea/somethng.iml
 somethng/.idea/vcs.xml
+somethng/.ipynb_checkpoints/Interactive Electric Potential Plot-checkpoint.ipynb
+somethng/.ipynb_checkpoints/Untitled1-checkpoint.ipynb
+somethng/.ipynb_checkpoints/V for an n-sided regular polygon-checkpoint.ipynb
+somethng/.ipynb_checkpoints/Untitled1-checkpoint.ipynb
+somethng/.ipynb_checkpoints/V for an n-sided regular polygon-checkpoint.py
+somethng/.ipynb_checkpoints/Untitled1-checkpoint.ipynb
+somethng/Interactive Electric Potential Plot.ipynb
+somethng/Untitled.ipynb
+somethng/Untitled1.ipynb
+somethng/Interactive Electric Potential Plot.ipynb
+somethng/.ipynb_checkpoints/Untitled1-checkpoint.ipynb
+somethng/.ipynb_checkpoints/Untitled1-checkpoint.ipynb
+somethng/Interactive Electric Potential Plot.ipynb
